<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@mipmap/bac01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_gravity="center_horizontal"
            android:text="@string/title_login"
            android:textColor="@android:color/black"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/heidian"
            />
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:textSize="16dp"
            android:inputType="phone"
            android:layout_marginTop="25dp"
            android:padding="5dp"
            android:maxLength="11"
            android:drawableLeft="@mipmap/phone"
            android:hint="@string/login_phone_hint"
            android:textColorHint="@color/account_hint"
            android:textColor="@color/account_focus"
            android:background="@mipmap/kuang"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/et_pwd"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:maxLength="16"
            android:padding="5dp"
            android:hint="@string/login_password_hint"
            android:singleLine="true"
            android:textSize="16dp"
            android:imeOptions="actionDone"
            android:digits="@string/psw_digits"
            android:textColorHint="@color/account_hint"
            android:textColor="@color/account_focus"
            android:drawableLeft="@mipmap/lock"
            android:background="@mipmap/kuang"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    <Button
        android:id="@+id/btn_login"
        android:text="@string/login"
        android:textSize="@dimen/default_btn_text_size"
        android:layout_marginTop="25dp"
        android:background="@mipmap/button"
        android:textColor="@color/selector_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
<TextView
    android:layout_marginTop="10dp"
    android:visibility="gone"
    android:text="@string/login_prompt"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:layout_marginTop="7dp"
            >
            <TextView
                android:id="@+id/tv_ls"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/xinzh"
                android:textSize="12dp"
                android:layout_marginBottom="5dp"
                />
        </RelativeLayout>
    <Button
        android:id="@+id/btn_register"
        android:layout_marginTop="10dp"
        android:text="@string/phoneRegister"
        android:textSize="@dimen/default_btn_text_size"
        android:textColor="#8a0402"
        android:background="@mipmap/zhuce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            >
            <TextView
                android:id="@+id/tv_forget"
                android:text="@string/forgetPsw"
                android:textColor="#477372"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/btn_skip"
            android:layout_marginBottom="10dp"
            android:drawablePadding="5dp"
           android:layout_gravity="bottom|center"
            android:drawableBottom="@mipmap/arrows_top"
            android:text="@string/justUse"
            android:textSize="17dp"
            android:textColor="#666666"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </FrameLayout>
    </LinearLayout>
</LinearLayout>