<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:clickable="true"
    android:background="@mipmap/bg03">
    <include layout="@layout/actionbar_account"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="190dp"
            android:layout_height="38dp"
            android:background="@mipmap/kuangt01"
            android:text="@string/zhuyi_title1"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zhuyi_con1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:layout_width="190dp"
            android:layout_height="38dp"
            android:background="@mipmap/kuangt01"
            android:text="@string/zhuyi_title2"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginTop="30dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/pic01"
            />
        <TextView
            android:id="@+id/tv_con2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zhuyi_con2"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
