<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@mipmap/bac01"
    android:fitsSystemWindows="true"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<include layout="@layout/actionbar_account"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:layout_marginTop="30dp"
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:inputType="phone"
            android:maxLength="11"
            android:hint="@string/register_hint_phone"
            android:textColorHint="@color/account_hint"
            android:textColor="@color/account_focus"
            android:background="@mipmap/kuang"
            android:paddingLeft="20dp"
            android:layout_height="50dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:inputType="number"
                android:maxLength="6"
                android:textColorHint="@color/account_hint"
                android:textColor="@color/account_focus"
                android:background="@mipmap/kuang"
                android:hint="@string/register_hint_code"
                android:paddingLeft="20dp"
                android:layout_height="50dp"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/tv_code"
           android:text="@string/getCode"
            android:background="@mipmap/button_s"
            android:textColor="#477972"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="50dp" />
    </LinearLayout>
        <EditText
            android:id="@+id/et_psw"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:paddingLeft="20dp"
            android:hint="@string/register_hint_psw"
            android:imeOptions="actionDone"
            android:digits="@string/psw_digits"
            android:textColorHint="@color/account_hint"
            android:textColor="@color/account_focus"
            android:background="@mipmap/kuang"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <!--<EditText-->
            <!--android:id="@+id/et_psw2"-->
            <!--android:visibility="gone"-->
            <!--android:inputType="textPassword"-->
            <!--android:maxLength="16"-->
            <!--android:singleLine="true"-->
            <!--android:gravity="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"/>-->
    <Button
        android:id="@+id/btn_commit"
        android:text="@string/title_register"
        android:textSize="@dimen/default_btn_text_size"
        android:enabled="false"
        android:textColor="@color/white_color"
        android:background="@mipmap/button"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            >
            <CheckBox
                android:id="@+id/ck_boxs"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:checked="true"
                style="@style/CustomCheckboxTheme"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="已阅读并同意"
                />
            <TextView
                android:id="@+id/tv_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="注册协议"
                android:paddingLeft="5dp"
                android:textColor="@color/linered"
                />
        </LinearLayout>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:visibility="gone"-->
        <!--android:orientation="horizontal">-->
        <!--<CheckBox-->
            <!--android:id="@+id/cb_deal"-->
            <!--android:text="@string/read_agree"-->
            <!--android:textSize="18sp"-->
            <!--android:checked="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<TextView-->
            <!--android:id="@+id/tv_deal"-->
            <!--android:textColor="#0000ff"-->
            <!--android:textSize="18sp"-->
            <!--android:text="@string/headerDeal"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
    <!--</LinearLayout>-->
</LinearLayout>
</LinearLayout>