<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    >
    <RelativeLayout
        android:paddingTop="10dp"
        android:id="@+id/layout_actionbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        android:background="@color/green_essential_colour"
        android:layout_height="70dp"
        >
        <LinearLayout
            android:id="@+id/ll_left"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            >
            <ImageView
                android:layout_gravity="center_vertical"
                android:id="@+id/btn_left"
                android:src="@mipmap/actionbar_back"
                android:layout_marginLeft="10dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_title"
            android:gravity="center"
            android:layout_width="match_parent"
            android:text="@string/title_forget_psw"
            android:textSize="@dimen/txt_18sp"
            android:textColor="@color/selector_white"
            android:layout_height="60dp"
            />
        <FrameLayout
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent"
            android:visibility="invisible"
            >
            <TextView
                android:layout_gravity="center_vertical"
                android:id="@+id/tv_right"
                android:textColor="@color/tv_black"
                android:padding="5dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                />
        </FrameLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/selector_white"
        android:padding="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cleancache"
            android:textColor="@color/txt_big_headline_color"
            android:textSize="@dimen/txt_16sp"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:id="@+id/ll_cache"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TextView
            android:id="@+id/cachesize"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/txt_16sp"
            android:text="70M"
            />
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/more"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            />
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginLeft="10dp"
            android:background="@color/txt_big_headline_color"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/selector_white"
        android:padding="10dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textColor="@color/txt_big_headline_color"
            android:textSize="@dimen/txt_16sp"
            android:gravity="center_vertical"
            />
        <LinearLayout
            android:id="@+id/update"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right"
            >
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@mipmap/more"
                android:layout_marginLeft="5dp"
                />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/outlogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/outlogin"
        android:textSize="@dimen/txt_16sp"
        android:textColor="@color/txt_big_headline_color"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/selector_white"
        />
</LinearLayout>